# blur-windows

./: .gitignore  CMakeLists.txt  CustomBlurWindowLibrary_要件定義書.md  README.md  README_EN.md
.github/workflows/: release.yml
blur-windows-rs/: Cargo.toml  build.rs
blur-windows-rs/examples/: basic.rs
blur-windows-rs/src/: lib.rs  safe.rs
demos/cpp_demo/: CMakeLists.txt  main.cpp
demos/gui_demo/: CMakeLists.txt  main.cpp
demos/tauri_demo/: package-lock.json  package.json
demos/tauri_demo/src/: index.html  main.js  styles.css
demos/tauri_demo/src-tauri/: build.rs  tauri.conf.json
demos/tauri_demo/src-tauri/src/: lib.rs
docs/: C_API_REFERENCE.md  C_API_REFERENCE_EN.md  USAGE_GUIDE.md  USAGE_GUIDE_EN.md
include/blurwindow/: blur_window.h  blurwindow.h  c_api.h
src/bindings/: c_api.cpp
src/capture/: DXGICapture.cpp  ICaptureSubsystem.h
src/config/: ConfigManager.h
src/core/: BlurSystem.cpp  BlurWindow.cpp  FullscreenRenderer.cpp  FullscreenRenderer.h  Logger.cpp  Logger.h  ResourceManager.cpp  ShaderLoader.h  SubsystemFactory.h  stb_image_impl.cpp
src/effects/: BoxBlur.cpp  EffectPipeline.cpp  GaussianBlur.cpp  IBlurEffect.h  KawaseBlur.cpp  RadialBlur.cpp  RainEffect.cpp  RainEffect.h
src/presentation/: DirectCompPresenter.cpp  IPresenter.h  ULWPresenter.cpp
src/shaders/: FullscreenVS.hlsl  GaussianBlurH.hlsl  GaussianBlurV.hlsl  Passthrough.hlsl
